# UniversalPath.org

./: .env  API.md  Cargo.toml  README.md  Rocket.toml  sqlx-data.json
.sqlx/: query-106eaa5aea0f37ffd03a3d544a8ae0f35f9ded223abc6cf7baea96829ebebd1b.json  query-16d0e62d4c9ed20cd0e8c974bab80cffa0f1dc4781a99820e744e476448a9754.json  query-25e859df66832c385bef40ef5a66c9b873d19654cb59955154b519b24c31f04d.json  query-31f46d18ba039053f8beb641bf770d9deafa24478fa448af7090fd0b1301b288.json  query-347264a504da977bd5358970d94dc064206744cbd28601de8d6ad3ec5c876f2f.json  query-3d13a07263895fbea59258052b208e5ce862b3cd6eafa52975311d23fe3257b2.json  query-49ed6ef024e87d3f53380372dacf44d17870898c3b5bcf9ab8df702122c9600a.json  query-6b0de299656a566b4814ed072ed0d08cdfceac7aa88b5fbfb8ff19d98c75e64a.json  query-723df71d37ce1645ba3228cdd6256583d6d83d38ed463205d6a6abcbf4f150d6.json  query-9f0e9cabc83c1209ae5c5f7d3c540db18420a7248d51ddc216c551363899fa87.json  query-a469ba23cec7db16ae5e6d228f9fd40730b57181ca0c4a651f73924c45e40b34.json  query-bf4d0da6f8484f39f5a1eb91b1c4b578d5929df897717d17ebe2d1a97c6bb01f.json  query-c6ba81ea09690bffe74923869d0add9cefc03c6fdd6bb9ebc498fceadfeca9d5.json  query-cf8fdf612572be2047caed5caaf296c0b76e78559cb83d7319cc84311c1103b0.json  query-ddcd42d3952e02765bea9cf4fc31bcebf0fb4c8f9a6e8912d458f823a224f111.json  query-f2b78ad49d9316deaea5936f03507e1419091e373702a273619186cf15b751af.json  query-f41c9c506ab531ed276b7373444e825df89ae88af4fbad59881ee3389f379c34.json
scripts/: deploy.sh  prepare-sqlx.sh
src/: config.rs  debug_build.rs  debug_routes.rs  main.rs  (+2 more)
(+31 files in other folders)
