[package]
name = "universal_path"
version = "0.1.0"
edition = "2021"
authors = ["Universal Path Team"]
description = "Website for UniversalPath.org"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_mysql"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
thiserror = "1.0"
bcrypt = "0.14"
jsonwebtoken = "8.3"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
futures = "0.3"
lazy_static = "1.4"
regex = "1.8"
slug = "0.1"
itertools = "0.11"
anyhow = "1.0"
markdown = { version = "1.0.0-alpha.23" }
html-escape = "0.2"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"